--- a/Assignment3/trans_insurance.ipynb
+++ b/Assignment3/trans_insurance.ipynb
@@ -16,7 +16,8 @@
     "from collections import Counter\n",
     "from sklearn.metrics import f1_score\n",
     "import matplotlib.pyplot as plt\n",
-    "import os"
+    "from torch.nn import TransformerEncoder, TransformerEncoderLayer\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -32,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 32"
+    "batch_size = 64"
    ]
   },
   {
@@ -163,64 +164,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CLSTM(nn.Module):\n",
-    "    def __init__(self, vocab_size, embed_dim, num_classes,ls_layer=64):\n",
+    "class TextTransformer(nn.Module):\n",
+    "    def __init__(self, vocab_size, embed_dim=256, num_classes=5,\n",
+    "                 num_layers=4, num_heads=8, max_len=300, pos_embed=True):\n",
     "        super().__init__()\n",
-    "        self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
-    "        self.conv = nn.Conv1d(embed_dim, 128, kernel_size=3, padding=1)\n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.lstm = nn.LSTM(128, 128, batch_first=True, bidirectional=True,dropout=0.3)\n",
-    "        self.attn_fc = nn.Linear(256, 1)\n",
-    "        self.fc = nn.Linear(256, num_classes)\n",
-    "        self.dropout = nn.Dropout(0.3)  # Add dropout\n",
-    "        self.bn = nn.BatchNorm1d(128)  # After conv layer\n",
-    "\n",
-    "\n",
+    "        self.embed_dim = embed_dim\n",
+    "        self.pos_embed_enabled = pos_embed\n",
+    "        \n",
+    "        # Embedding layers\n",
+    "        self.word_embedding = nn.Embedding(vocab_size, embed_dim)\n",
+    "        if pos_embed:\n",
+    "            self.position_embedding = nn.Embedding(max_len, embed_dim)\n",
+    "        \n",
+    "        # Transformer encoder layer\n",
+    "        encoder_layer = nn.TransformerEncoderLayer(\n",
+    "            d_model=embed_dim,\n",
+    "            nhead=num_heads,\n",
+    "            dim_feedforward=512,\n",
+    "            dropout=0.1,\n",
+    "            activation=\"gelu\"\n",
+    "        )\n",
+    "        self.transformer_encoder = nn.TransformerEncoder(encoder_layer, num_layers=num_layers)\n",
+    "        \n",
+    "        # Classification layer\n",
+    "        self.classifier = nn.Linear(embed_dim, num_classes)\n",
+    "    \n",
     "    def forward(self, x):\n",
-    "        x = self.embedding(x)              \n",
-    "        x = x.permute(0, 2, 1)           \n",
-    "        x = self.relu(self.conv(x))    \n",
-    "        x = self.dropout(x)  # After embedding/conv layers\n",
-    "   \n",
-    "        x = x.permute(0, 2, 1)             \n",
-    "        lstm_out, _ = self.lstm(x)        # (B, T, 2H)\n",
-    "        x = torch.tanh(lstm_out)\n",
-    "        attn_weights = torch.softmax(self.attn_fc(x), dim=1)  # (B, T, 1)\n",
-    "        context = torch.sum(attn_weights * x, dim=1)          # (B, 2H)\n",
-    "        return self.fc(context)           # (B, num_classes)\n"
+    "        positions = torch.arange(0, x.size(1), dtype=torch.long).unsqueeze(0).to(device)\n",
+    "        \n",
+    "        x_embed = self.word_embedding(x)\n",
+    "        if self.pos_embed_enabled:\n",
+    "            x_embed += self.position_embedding(positions)\n",
+    "        \n",
+    "        x_transformed = self.transformer_encoder(x_embed)\n",
+    "        x_pooled = x_transformed.mean(dim=1)  # Mean pooling across sequence length\n",
+    "        \n",
+    "        return self.classifier(x_pooled)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_model(model, loader, criterion, optimizer, device):\n",
-    "    model.train()\n",
-    "    total_loss = 0\n",
-    "    correct_train = 0\n",
-    "    total_train = 0\n",
-    "    for texts, labels in loader:\n",
-    "        texts, labels = texts.to(device), labels.to(device)\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(texts)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        total_loss += loss.item()\n",
-    "\n",
-    "        _, predicted = torch.max(outputs, 1)\n",
-    "        total_train += labels.size(0)\n",
-    "        correct_train += (predicted == labels).sum().item()\n",
-    "    avg_train_loss = total_loss / len(train_loader)\n",
-    "    train_accuracy = 100 * correct_train / total_train\n",
-    "    return avg_train_loss , train_accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,85 +236,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(model, loader, criterion, optimizer):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    correct_train = 0\n",
+    "    total_train = 0\n",
+    "    for texts, labels in loader:\n",
+    "        texts, labels = texts.to(device), labels.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(texts)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        total_train += labels.size(0)\n",
+    "        correct_train += (predicted == labels).sum().item()\n",
+    "    avg_train_loss = total_loss / len(train_loader)\n",
+    "    train_accuracy = 100 * correct_train / total_train\n",
+    "    return avg_train_loss , train_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "EPOCHS = 50\n",
     "lr = 0.0003\n",
-    "weight_decay = 1e-3\n",
-    "ls_layer = 64\n",
-    "hidden = 64"
+    "weight_decay = 1e-3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\kashp\\miniconda3\\envs\\dla3\\lib\\site-packages\\torch\\nn\\modules\\rnn.py:123: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.3 and num_layers=1\n",
+      "c:\\Users\\kashp\\miniconda3\\envs\\dla3\\lib\\site-packages\\torch\\nn\\modules\\transformer.py:385: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
+    "model_params = {\n",
+    "    \"vocab_size\": len(train_data.vocab),\n",
+    "    \"embed_dim\": 512,\n",
+    "    \"num_classes\": len(train_data.label2idx),\n",
+    "    \"num_layers\": 2,\n",
+    "    \"num_heads\": 8,\n",
+    "    \"max_len\": max_len,\n",
+    "    \"pos_embed\": True\n",
+    "}\n",
     "\n",
-    "# Model\n",
-    "model = CLSTM(len(train_data.vocab), embed_dim=512, num_classes=len(train_data.label2idx),\n",
-    "              ).to(device)\n"
+    "model = TextTransformer(**model_params).to(device)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.AdamW(model.parameters(), lr=lr,weight_decay=weight_decay)"
+    "optimizer = optim.AdamW(model.parameters(), lr=0.0002)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50 | Train Loss: 1.5432 | Train Acc: 28.26% | Val Loss: 1.4705 | Val Acc: 37.28% | f1: 0.37\n",
-      "Epoch 2/50 | Train Loss: 1.2365 | Train Acc: 55.84% | Val Loss: 0.9742 | Val Acc: 58.78% | f1: 0.59\n",
-      "Epoch 3/50 | Train Loss: 0.6462 | Train Acc: 78.26% | Val Loss: 0.6424 | Val Acc: 73.61% | f1: 0.74\n",
-      "Epoch 4/50 | Train Loss: 0.3932 | Train Acc: 87.72% | Val Loss: 0.4253 | Val Acc: 85.44% | f1: 0.85\n",
-      "Epoch 5/50 | Train Loss: 0.2316 | Train Acc: 94.30% | Val Loss: 0.3918 | Val Acc: 86.67% | f1: 0.87\n",
-      "Epoch 6/50 | Train Loss: 0.1836 | Train Acc: 94.63% | Val Loss: 0.3414 | Val Acc: 88.98% | f1: 0.89\n",
-      "Epoch 7/50 | Train Loss: 0.1376 | Train Acc: 95.77% | Val Loss: 0.3418 | Val Acc: 89.25% | f1: 0.89\n",
-      "Epoch 8/50 | Train Loss: 0.0775 | Train Acc: 97.99% | Val Loss: 0.3478 | Val Acc: 88.71% | f1: 0.89\n",
-      "Epoch 9/50 | Train Loss: 0.0701 | Train Acc: 98.39% | Val Loss: 0.3116 | Val Acc: 90.61% | f1: 0.91\n",
-      "Epoch 10/50 | Train Loss: 0.1319 | Train Acc: 97.52% | Val Loss: 0.3190 | Val Acc: 89.25% | f1: 0.89\n",
-      "Epoch 11/50 | Train Loss: 0.1022 | Train Acc: 97.65% | Val Loss: 0.2870 | Val Acc: 91.02% | f1: 0.91\n",
-      "Epoch 12/50 | Train Loss: 0.0460 | Train Acc: 99.19% | Val Loss: 0.2586 | Val Acc: 91.16% | f1: 0.91\n",
-      "Epoch 13/50 | Train Loss: 0.0228 | Train Acc: 99.73% | Val Loss: 0.2899 | Val Acc: 91.29% | f1: 0.91\n",
-      "Epoch 14/50 | Train Loss: 0.0277 | Train Acc: 99.26% | Val Loss: 0.3374 | Val Acc: 89.93% | f1: 0.90\n",
-      "Epoch 15/50 | Train Loss: 0.0194 | Train Acc: 99.60% | Val Loss: 0.3090 | Val Acc: 91.02% | f1: 0.91\n",
-      "Epoch 16/50 | Train Loss: 0.0092 | Train Acc: 99.93% | Val Loss: 0.3431 | Val Acc: 91.16% | f1: 0.91\n",
-      "Epoch 17/50 | Train Loss: 0.0100 | Train Acc: 99.93% | Val Loss: 0.3560 | Val Acc: 88.84% | f1: 0.89\n",
-      "Epoch 18/50 | Train Loss: 0.0091 | Train Acc: 99.87% | Val Loss: 0.3494 | Val Acc: 90.88% | f1: 0.91\n",
-      "Epoch 19/50 | Train Loss: 0.0546 | Train Acc: 98.05% | Val Loss: 0.4891 | Val Acc: 85.31% | f1: 0.85\n",
-      "Epoch 20/50 | Train Loss: 0.0709 | Train Acc: 98.39% | Val Loss: 0.3080 | Val Acc: 90.75% | f1: 0.91\n",
-      "Epoch 21/50 | Train Loss: 0.0100 | Train Acc: 99.93% | Val Loss: 0.3058 | Val Acc: 91.43% | f1: 0.91\n",
-      "Epoch 22/50 | Train Loss: 0.0052 | Train Acc: 100.00% | Val Loss: 0.2885 | Val Acc: 92.11% | f1: 0.92\n",
-      "Epoch 23/50 | Train Loss: 0.0042 | Train Acc: 100.00% | Val Loss: 0.3362 | Val Acc: 91.70% | f1: 0.92\n",
-      "Epoch 24/50 | Train Loss: 0.0030 | Train Acc: 100.00% | Val Loss: 0.3166 | Val Acc: 92.24% | f1: 0.92\n",
-      "Epoch 25/50 | Train Loss: 0.0094 | Train Acc: 99.87% | Val Loss: 0.4359 | Val Acc: 88.16% | f1: 0.88\n",
-      "Epoch 26/50 | Train Loss: 0.0073 | Train Acc: 99.80% | Val Loss: 0.3402 | Val Acc: 91.16% | f1: 0.91\n",
-      "Epoch 27/50 | Train Loss: 0.0021 | Train Acc: 100.00% | Val Loss: 0.3321 | Val Acc: 91.56% | f1: 0.92\n",
-      "Early stopping at epoch 26. Best val loss: 0.2586\n"
+      "Epoch 1/50 | Train Loss: 1.5849 | Train Acc: 23.29% | Val Loss: 1.5235 | Val Acc: 28.30% | f1: 0.28\n",
+      "Epoch 2/50 | Train Loss: 1.5151 | Train Acc: 29.40% | Val Loss: 1.4880 | Val Acc: 36.87% | f1: 0.37\n",
+      "Epoch 3/50 | Train Loss: 1.3785 | Train Acc: 40.67% | Val Loss: 1.3682 | Val Acc: 36.87% | f1: 0.37\n",
+      "Epoch 4/50 | Train Loss: 1.2530 | Train Acc: 46.38% | Val Loss: 1.2676 | Val Acc: 42.31% | f1: 0.42\n",
+      "Epoch 5/50 | Train Loss: 1.1642 | Train Acc: 52.08% | Val Loss: 1.2061 | Val Acc: 51.43% | f1: 0.51\n",
+      "Epoch 6/50 | Train Loss: 1.0562 | Train Acc: 57.58% | Val Loss: 1.0619 | Val Acc: 56.73% | f1: 0.57\n",
+      "Epoch 7/50 | Train Loss: 0.9416 | Train Acc: 64.70% | Val Loss: 0.9561 | Val Acc: 67.07% | f1: 0.67\n",
+      "Epoch 8/50 | Train Loss: 0.8567 | Train Acc: 69.33% | Val Loss: 0.8898 | Val Acc: 70.34% | f1: 0.70\n",
+      "Epoch 9/50 | Train Loss: 0.7646 | Train Acc: 75.97% | Val Loss: 0.8264 | Val Acc: 77.28% | f1: 0.77\n",
+      "Epoch 10/50 | Train Loss: 0.6465 | Train Acc: 83.62% | Val Loss: 0.6977 | Val Acc: 82.45% | f1: 0.82\n",
+      "Epoch 11/50 | Train Loss: 0.5296 | Train Acc: 89.26% | Val Loss: 0.6713 | Val Acc: 76.05% | f1: 0.76\n",
+      "Epoch 12/50 | Train Loss: 0.4397 | Train Acc: 91.34% | Val Loss: 0.5681 | Val Acc: 84.63% | f1: 0.85\n",
+      "Epoch 13/50 | Train Loss: 0.3415 | Train Acc: 95.70% | Val Loss: 0.4894 | Val Acc: 87.89% | f1: 0.88\n",
+      "Epoch 14/50 | Train Loss: 0.2863 | Train Acc: 96.44% | Val Loss: 0.4719 | Val Acc: 87.21% | f1: 0.87\n",
+      "Epoch 15/50 | Train Loss: 0.2220 | Train Acc: 97.72% | Val Loss: 0.4446 | Val Acc: 87.48% | f1: 0.87\n",
+      "Epoch 16/50 | Train Loss: 0.1879 | Train Acc: 98.93% | Val Loss: 0.3784 | Val Acc: 91.02% | f1: 0.91\n",
+      "Epoch 17/50 | Train Loss: 0.1668 | Train Acc: 99.40% | Val Loss: 0.3880 | Val Acc: 89.66% | f1: 0.90\n",
+      "Epoch 18/50 | Train Loss: 0.1378 | Train Acc: 99.06% | Val Loss: 0.3732 | Val Acc: 90.48% | f1: 0.90\n",
+      "Epoch 19/50 | Train Loss: 0.1066 | Train Acc: 99.73% | Val Loss: 0.3521 | Val Acc: 90.61% | f1: 0.91\n",
+      "Epoch 20/50 | Train Loss: 0.0869 | Train Acc: 99.80% | Val Loss: 0.3389 | Val Acc: 90.75% | f1: 0.91\n",
+      "Epoch 21/50 | Train Loss: 0.0778 | Train Acc: 99.87% | Val Loss: 0.3378 | Val Acc: 92.11% | f1: 0.92\n",
+      "Epoch 22/50 | Train Loss: 0.0696 | Train Acc: 99.73% | Val Loss: 0.3076 | Val Acc: 92.79% | f1: 0.93\n",
+      "Epoch 23/50 | Train Loss: 0.0548 | Train Acc: 99.87% | Val Loss: 0.3054 | Val Acc: 91.84% | f1: 0.92\n",
+      "Epoch 24/50 | Train Loss: 0.0489 | Train Acc: 99.87% | Val Loss: 0.3038 | Val Acc: 91.70% | f1: 0.92\n",
+      "Epoch 25/50 | Train Loss: 0.0455 | Train Acc: 99.93% | Val Loss: 0.3044 | Val Acc: 91.29% | f1: 0.91\n",
+      "Epoch 26/50 | Train Loss: 0.0356 | Train Acc: 99.93% | Val Loss: 0.2992 | Val Acc: 92.52% | f1: 0.93\n",
+      "Epoch 27/50 | Train Loss: 0.0307 | Train Acc: 99.93% | Val Loss: 0.2690 | Val Acc: 93.20% | f1: 0.93\n",
+      "Epoch 28/50 | Train Loss: 0.0291 | Train Acc: 100.00% | Val Loss: 0.2859 | Val Acc: 92.52% | f1: 0.93\n",
+      "Epoch 29/50 | Train Loss: 0.0266 | Train Acc: 99.93% | Val Loss: 0.2586 | Val Acc: 93.61% | f1: 0.94\n",
+      "Epoch 30/50 | Train Loss: 0.0212 | Train Acc: 100.00% | Val Loss: 0.2597 | Val Acc: 93.61% | f1: 0.94\n",
+      "Epoch 31/50 | Train Loss: 0.0217 | Train Acc: 100.00% | Val Loss: 0.2736 | Val Acc: 92.24% | f1: 0.92\n"
      ]
     }
    ],
@@ -338,7 +360,7 @@
     "best_val_loss = float('inf')\n",
     "counter = 0  \n",
     "for epoch in range(EPOCHS):\n",
-    "    avg_train_loss , train_accuracy = train_model(model, train_loader, criterion, optimizer, device)\n",
+    "    avg_train_loss , train_accuracy = train_model(model, train_loader, criterion, optimizer)\n",
     "    avg_val_loss, val_accuracy ,f1 = evaluate_model(model, test_loader, criterion)\n",
     "    print(f\"Epoch {epoch+1}/{EPOCHS} | \"\n",
     "              f\"Train Loss: {avg_train_loss:.4f} | Train Acc: {train_accuracy:.2f}% | \"\n",
@@ -346,8 +368,8 @@
     "    \n",
     "    if avg_val_loss < best_val_loss:\n",
     "        best_val_loss = avg_val_loss\n",
-    "        counter = 0  # Reset patience counter\n",
-    "        best_model = model.state_dict()  # Save best model\n",
+    "        counter = 0 \n",
+    "        best_model = model.state_dict()  \n",
     "    else:\n",
     "        counter += 1\n",
     "\n",
@@ -358,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +389,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +408,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Final Micro F1 Score = 0.9156\n"
+      "Final Micro F1 Score = 0.9429\n"
      ]
     }
    ],
@@ -396,48 +418,6 @@
     "print(f\"\\nFinal Micro F1 Score = {f1:.4f}\")\n",
     "label_names = [label for label, _ in sorted(train_data.label2idx.items(), key=lambda x: x[1])]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
